[package]
name = "armada-lp-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "armada-lp-value"
path = "src/main.rs"

[dependencies]
anchor-lang = "^0.26"
anchor-spl = "^0.26"
solana-rpc-client = "^1.16"
solana-rpc-client-api = "^1.16"
solana-sdk = "^1.16"
tokio = {version = "1", features = ["full"] }

clmm-bindings = { path = "../psylbc/programs/clmm-bindings" }
whirlpool = { git = "https://github.com/orca-so/whirlpools", rev = "f54632f", features = ["no-entrypoint"] }